adding email view